# cli-tutor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md
.github/workflows/: release.yml
Formula/: cli-tutor.rb
assets/: demo.tape
content/: awk.toml  bc.toml  cat.toml  chmod.toml  cut.toml  diff.toml  find.toml  git.toml  grep.toml  head.toml  jq.toml  log-processing.toml  ls.toml  make.toml  modules.toml  paste.toml  sed.toml  sort.toml  tail.toml  tar.toml  tee.toml  text-processing.toml  tr.toml  uniq.toml  wc.toml  xargs.toml
features/: command_history.feature.yaml  command_modules.feature.yaml  config_file.feature.yaml  content_display.feature.yaml  difficulty_filter.feature.yaml  exercise_runner.feature.yaml  free_practice.feature.yaml  gamification.feature.yaml  module_search.feature.yaml  more_modules.feature.yaml  navigation.feature.yaml  no_color.feature.yaml  paste_support.feature.yaml  progress_summary.feature.yaml  progress_tracking.feature.yaml  shell_completions.feature.yaml  text_input.feature.yaml  timed_challenge.feature.yaml  word_jump.feature.yaml
src/: app.rs  config.rs  executor.rs  lib.rs  main.rs  matcher.rs  progress.rs
src/content/: mod.rs  types.rs
src/ui/: command_list.rs  content_pane.rs  exercise_view.rs  free_practice_view.rs  help_overlay.rs  input_bar.rs  layout.rs  mod.rs  progress_overlay.rs
tests/: app_state_tests.rs  content_tests.rs  executor_tests.rs  exercise_solutions_test.rs  matcher_tests.rs  progress_tests.rs
