[package]
name = "cli-tutor"
version = "0.1.0"
edition = "2021"

[lib]
name = "cli_tutor"
path = "src/lib.rs"

[[bin]]
name = "cli-tutor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
