[package]
name = "cli-tutor"
version = "0.4.1"
edition = "2021"
description = "Interactive terminal app for learning Unix command-line tools"
license = "MIT"
repository = "https://github.com/ShadabGhazali/cli-tutor"
keywords = ["cli", "tui", "terminal", "learning", "unix"]
categories = ["command-line-utilities"]
exclude = ["features/"]

[lib]
name = "cli_tutor"
path = "src/lib.rs"

[[bin]]
name = "cli-tutor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
